[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamingvex-tools"
version = "0.1.0"
description = "Public client tools for StreamingVEX — supplier VEX pusher CLI and webhook receiver example."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "StreamingVEX contributors" }]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "cryptography>=43.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
]

[project.optional-dependencies]
webhook = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]
dev = [
  "pytest>=8.3.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.scripts]
streamingvex-push = "streamingvex_tools.pusher.cli:main"
vex-pusher = "streamingvex_tools.pusher.cli:main"

[project.urls]
Homepage = "https://github.com/MatchPoint/StreamingVEX_tools"
Documentation = "https://github.com/MatchPoint/StreamingVEX_tools/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["streamingvex_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
